# PerspectivePrism

./: .gitignore  AGENTS.md  README.md  architecture.md  implementation_plan.md  run-agents.md  task.md  walkthrough.md  walkthrough_claim_extraction.md
.benchmarks/: evaluate_agents.py
backend/: .env.example  debug_settings.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: analysis_service.py  claim_extractor.py  evidence_retriever.py
backend/app/utils/: input_sanitizer.py  llm_client.py  video_utils.py
backend/prism_sanitizer_rs/: Cargo.toml  pyproject.toml
backend/prism_sanitizer_rs/src/: lib.rs
backend/scripts/: live_smoke_test.py
backend/tests/: test_analysis_service_init.py  test_assessment.py  test_claim_extractor.py  test_input_sanitizer.py  test_integration.py  test_reliability.py
chrome-extension/: .gitignore  LIGHT_THEME_IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  MEMORY_PROFILING.md  background.js  build.js  claim-navigator.js  client.js  config.js  consent.js  content-markers-script.js  content-markers.js  content.css  content.js  eslint.config.js  logging-utils-script.js  logging-utils.js  manifest.json  memory-monitor.js  metrics-tracker.js  options.html  options.js  package-lock.json  package.json  playwright.config.js  popup.html  popup.js  privacy.html  progressive-text-generation-walkthrough.md  quota-manager.js  refactor-walkthrough.md  sidepanel.css  sidepanel.html  sidepanel.js  test-cache-performance.html  test-cache.html  (+18 more)
(+112 files in other folders)
