[build-system]
requires = ["setuptools>=61.0", "wheel", "maturin"]
build-backend = "setuptools.build_meta"

[project]
name = "perspective-prism"
version = "0.1.0"
description = "YouTube Perspectivalist dis/misinformation analysis MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Perspective Prism Team" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "youtube-transcript-api",
  "google-genai>=2.9.0,<3.0.0",
  "google-adk>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
